--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-server.port=8081
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost3306/quadbike
 spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.password=JP0928@vw2312
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.SpringPhysicalNamingStrategy
 spring.jpa.generate-ddl=true
